--- a/index.html
+++ b/index.html
@@ -1,13 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevBoard</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="./styles.css">
+
+    <!-- Font CDN -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+
 
 </head>
-<body class=""bg-gray-100 text-center p-10""> 
-    <h1 class="text-3xl font-bold text-blue-600">New Assignment</h1> 
+
+<body class="bg-gray-100 p-4 pl-20 pr-20">
+    <header>
+        <!-- Header Section -->
+        <div class="bg-white shadow-md p-4 flex rounded-lg justify-between">
+            <div class="flex items-center space-x-2 ">
+                <img src="./assets/logo.png" alt="">
+                <div class="text-blue-600 font-medium text-3xl">Dev<span class="text-black font-bold">Board</span></div>
+            </div>
+            <div class="flex items-center space-x-4">
+                <div class="bg-gray-200 p-2 rounded-md flex gap-3">
+                    <img src="./assets/checkbox.png" alt="">
+                    <div id="nav-number" class="text-2xl font-bold">23</div>
+                </div>
+                <div class="bg-gray-200 rounded-full p-2">
+                    <img src="./assets/theme-btn.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="grid grid-cols-12 gap-6 mt-6">
+            <div class="col-span-9 space-y-6">
+                <div class="grid grid-cols-4 gap-4">
+                    <!-- Assigned Task -->
+                    <div class="bg-white p-4 rounded-lg shadow-md flex gap-3 items-start">
+                        <div>
+                            <img src="./assets/checkbox.png" alt="">
+                        </div>
+                        <div>
+
+                            <div id="task-complete" class="text-blue-500 text-xl font-bold">6</div>
+                            <div class="text-gray-500 text-sm">Task Assigned</div>
+
+                        </div>
+                    </div>
+                    <!-- Discover Something New Today-->
+                    <div
+                        class="bg-gradient-to-r col-span-2 from-blue-500 to-purple-500 text-white p-4 rounded-lg shadow-md flex items-center justify-center">
+                        <img src="./assets/board.png" alt="">
+                        <div class="text-lg font-semibold">Discover Something New Today!</div>
+                    </div>
+                    <div class="bg-white p-4  rounded-lg shadow-md flex gap-3 items-center">
+                        <img src="./assets/calender.png" alt="">
+                        <div class="text-gray-500 text-sm font-bold">Tue Feb 25, 2025</div>
+                    </div>
+                </div>
+
+
+
+                <div class="grid grid-cols-3 gap-4">
+                    <!-- Task Card -->
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Shop Ease</div>
+                        <div class="font-bold text-lg">Fix Mobile Button Issue</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 21 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Soft Pay</div>
+                        <div class="font-bold text-lg">Add Pay Success Modal</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 25 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Meta</div>
+                        <div class="font-bold text-lg">Add New Reaction 🙌</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 31 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Meta</div>
+                        <div class="font-bold text-lg">Add New Reaction 🙌</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 31 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Meta</div>
+                        <div class="font-bold text-lg">Add New Reaction 🙌</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 31 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <div class="text-gray-500 text-sm">Meta</div>
+                        <div class="font-bold text-lg">Add New Reaction 🙌</div>
+                        <p class="text-gray-500 text-sm mt-2">A card component has a figure, body, title, and action
+                            parts.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-gray-500 text-sm">Deadline: 31 March 2025</span>
+                            <button class="bg-purple-600 cursor-pointer text-white px-4 py-1 rounded-lg text-sm completed-btn ">Completed</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Panel (Activity Log) -->
+            <div class="col-span-3 bg-white p-4 rounded-lg shadow-md">
+                <div class="font-bold text-lg flex items-center space-x-2">
+                    <span>🕒</span>
+                    <span>Activity Log</span>
+                </div>
+                <button class="bg-purple-600 cursor-pointer text-white px-4 py-2 rounded-lg mt-4 w-full">Clear History</button>
+            </div>
+        </div>
+        </div>
+
+</main>
+<script src="./script.js"></script>
 </body>
+
 </html>
